--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
     "@ng-bootstrap/ng-bootstrap": "^5.1.0",
+    "ag-grid-angular": "^21.1.0",
+    "ag-grid-community": "^21.1.0",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
